<resources>
    <string name="app_name">Droid Cafe</string>
    <string name="donut_descrip">Donuts are glazed and sprinkled with candy</string>
    <string name="icecream_descrip">Ice cream sandwiches have chocolate wafers and vanilla filling</string>
    <string name="froyo_descrip">FroYo is premium self-service frozen yogurt</string>
    <string name="donut_order_message">You Order Donut.</string>
    <string name="icecream_order_message">You Order IceCream Sandwich.</string>
    <string name="froyo_order_message">You Order FroYo.</string>

    <string name="order_label">You Order a donut</string>
    <string name="name_label">Name</string>
    <string name="address_label">Address</string>
    <string name="phone_label">Phone</string>
    <string name="note_label">Note</string>
    <string name="delivery_label">Choose a delivery method</string>

    <string name="name_hint">Name</string>
    <string name="address_hint">Address</string>
    <string name="phone_hint">Enter Phone</string>
    <string name="notes_hint">Notes</string>

    <string name="choose_delivery_method">Choose a delivery method:</string>
    <string name="same_day_messenger_service">Same day messenger service</string>
    <string name="next_day_ground_delivery">Next day ground delivery</string>
    <string name="pick_up">Pick up</string>


    <string name="action_setting">Settings</string>
    <string name="action_order_message">You selected Order</string>
    <string name="action_status_message">You selected Status</string>
    <string name="action_favorites_message">You selected Favorites</string>
    <string name="action_contact_message">You selected Contact</string>
    <string name="title_activity_order">Order Activity</string>
    <string name="favorites">Favorites</string>
    <string name="status">Status</string>
    <string name="order">Order</string>
    <string name="contact">Contact</string>
    <string name="enter_phone_hint" />
    
    
    <string-array name="labels_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>
</resources>